# openvino_handson

./: README.md  clean-result.sh  clean.sh  models.lst  setup.sh  test.sh
lesson/01_basic_sample/: CMakeLists.txt  README_ja.md  clean.sh  main.cpp  setup.sh  test.sh
lesson/02_benchmark/: clean.sh  models.lst  setup.sh  test.sh
lesson/03_omz-demo/: clean-result.sh  models.lst  setup.sh  test.sh
lesson/03_omz-demo/scripts/: run_human_pose_estimation_demo_cpp.sh  run_image_restoration_demo.sh  run_image_super_resolution_demo.sh  run_noise_suppression_demo.sh  run_object_detection_demo_cpp.sh
lesson/04_ov-api/: clean-result.sh  clean.sh  infer-ov.py  infer-ov_ppp.py  infer-ov_ppp_ireq.py  infer-tf.py  setup.sh  test.sh
lesson/05_pot/: clean.sh  setup.sh  test.sh
lesson/06_notebooks/: clean-result.sh  clean.sh  setup.sh  test.sh
lesson/07_nncf_ptq/: clean-result.sh  clean.sh  log-sample.txt  nncf_ptq_openvino_cifar100_resnet.py  requirements.txt  setup.sh  test.sh
omz-demo/: clean.sh  setup.sh  test.sh
omz-demo/scripts/: run_human_pose_estimation_demo_python.sh  run_object_detection_demo_python.sh
ov-api/: infer-ov_async.py  infer-ov_ppp.py  setup.sh  test.sh
pot/: clean-result.sh  setup.sh  test.sh
scripts/: download-media.sh  download-omz-models.sh  install-devtools.sh  install-package.sh  setup-igpu.sh  setup-omz-demo.sh
